<?xml version='1.0' encoding='UTF-8'?>
<resources>
  <!--~ Copyright (C) 2014 jonas.oreland@gmail.com
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.-->
  <string name="mm31kz513sg5" translatable="false">mm(31);kz(5,13);sg(5)</string>
  <string name="_sign_plus" translatable="false">+</string>
  <string name="_sign_minus" translatable="false">-</string>
  <string name="path_simplification_default_tolerance" translatable="false">3</string>
  <string name="run_active_since">Time:</string>
  <string name="distance">Distance:</string>
  <string name="pace">Pace:</string>
  <string name="live_ranking">Live Ranking:</string>
  <string name="code_placeholder">Code: %s</string>
  <string name="hourglass">Hourglass</string>
    <string name="waiting_participants">Waiting for participants</string>
  <string name="wait_host">Wait until the host starts the run</string>
    <string name="run_distance">Distance</string>
  <string name="distance_placeholder">Distance: %.1f km</string>
  <string name="community_run_subtitle">Create or join a Community Run</string>
  <string name="create_run_subtitle">Fill in the details and off you go</string>
    <string name="gps_ready">GPS ready</string>
  <string name="Waiting_for_GPS">Waiting for GPS</string>
    <string name="leave_run">Leave run</string>
  <string name="label_code">CODE</string>
  <string name="label_distance">DISTANCE</string>
  <string name="label_pace">PACE</string>
  <string name="host">Host</string>
  <string name="label_time">TIME</string>
  <string name="label_progress">PROGRESS</string>
  <string name="finish_congrats_title">You finished!</string>
  <string name="finish_congrats_subtitle">Great run - you\'ve completed the distance!</string>
  <string name="label_finished">finished</string>
  <string name="label_still_running">still running</string>
  <string name="countdown_go">GO!</string>
  <string name="run_starts_in">Run begins</string>
</resources>
